# test-open-api-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  redocly.yaml
.github/workflows/: static.yml
open-api/: test-oas3.yaml
open-api/aspnetcore/: Org.OpenAPITools.sln  README.md
open-api/aspnetcore/src/Org.OpenAPITools/: Org.OpenAPITools.csproj  Startup.cs
open-api/aspnetcore/src/Org.OpenAPITools/Attributes/: ValidateModelStateAttribute.cs
open-api/aspnetcore/src/Org.OpenAPITools/Authentication/: ApiAuthentication.cs
open-api/aspnetcore/src/Org.OpenAPITools/Controllers/: PetApi.cs  StoreApi.cs  (+1 more)
open-api/html/: index.html
open-api/python-fastapi/: README.md  openapi.yaml  requirements.txt  setup.cfg
open-api/python-fastapi/.openapi-generator/: FILES
open-api/python-fastapi/src/openapi_server/: main.py  security_api.py
open-api/python-fastapi/src/openapi_server/apis/: pet_api.py  pet_api_base.py  store_api.py  store_api_base.py  user_api.py  user_api_base.py
open-api/python-fastapi/src/openapi_server/models/: address.py  api_response.py  category.py  customer.py  order.py  pet.py  tag.py  user.py
open-api/python-fastapi/tests/: test_pet_api.py  test_store_api.py  test_user_api.py
open-api/typescript-redux-query/.openapi-generator/: FILES
open-api/typescript-redux-query/src/: runtime.ts
open-api/typescript-redux-query/src/apis/: PetApi.ts  StoreApi.ts  UserApi.ts
open-api/typescript-redux-query/src/models/: Address.ts  Category.ts  Customer.ts  ModelApiResponse.ts  Order.ts  Pet.ts  Tag.ts  User.ts  index.ts
(+14 files in other folders)
